--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get_it: ^4.0.4
-  http: ^0.12.2
-  json_serializable: ^3.4.1
   fit_kit: ^1.1.2
   firebase_auth: ^0.18.0+1
   firebase_core: ^0.5.0
   google_sign_in: ^4.5.3
+  flutter_appavailability: ^0.0.21
+  url_launcher: ^5.7.2
+  wave: ^0.1.0
+  google_fonts: ^1.1.0
+  font_awesome_flutter: ^8.8.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -51,8 +53,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
