--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,6 +32,7 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+    ndkVersion "21.3.6528147"
 
     lintOptions {
         disable 'InvalidPackage'
