--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   firebase_auth: ^0.18.0+1
   firebase_core: ^0.5.0
   google_sign_in: ^4.5.3
+  firebase_database: ^4.1.0
+  shared_preferences: ^0.5.12
+  fluttertoast: ^7.1.1
   flutter_appavailability: ^0.0.21
   url_launcher: ^5.7.2
   wave: ^0.1.0
